kubernetes/apps/selfhosted-apps/xiaoya/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.noirprime.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: xiaoya-emby
spec:
  hostnames: ["xiaoya.noirprime.com"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: xiaoya
          namespace: selfhosted-apps
          port: 2345
